# ha-bluetooth-sig

./: .gitignore  LICENSE  README.md  ha_plan.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: ha-debugging.instructions.md  ha-integration.instructions.md  ha-testing.instructions.md
.github/workflows/: ci.yml  hacs.yml  release.yml
custom_components/bluetooth_sig_devices/: PLAN.md  __init__.py  advertisement_converter.py  advertisement_manager.py  config_flow.py  const.py  coordinator.py  coordinator_old.py  data_pipeline.py  device_adapter.py  device_validator.py  diagnostics.py  discovery_orchestrator.py  discovery_tracker.py  entity_builder.py  entity_metadata.py  gatt_manager.py  gatt_poller.py  manifest.json  quality_scale.yaml  sensor.py  strings.json  support_detector.py
docs/: index.md
docs/codebase/: STACK.md
docs/explanation/: architecture.md  data-paths.md  discovery.md  index.md  limitations.md  roles.md
docs/how-to/: configure-device-options.md  configure-poll-interval.md  enable-debug-logging.md  examples.md  index.md  remove-device.md  remove-integration.md  troubleshooting.md
docs/reference/: configuration.md  diagnostics.md  entities.md  index.md  supported-characteristics.md
docs/tutorials/: getting-started.md
memory-bank/: activeContext.md  architect.md  decisionLog.md  productContext.md  progress.md  projectBrief.md  systemPatterns.md
scripts/: capture_ble_fixtures.py
tests/: TESTING.md  __init__.py  bluetooth_helpers.py  conftest.py  test_advertisement_manager.py  test_config_flow.py  test_coordinator.py  test_device_adapter.py  test_device_identity.py  test_device_validator.py  test_diagnostics.py  test_discovery_flow.py  test_entity_builder.py  test_entity_metadata.py  test_gatt_manager.py  test_init.py  test_integration_advertising.py  test_integration_confirmed_device.py  test_integration_connected.py  test_library_smoke.py  test_sensor.py  test_support_detector.py
tests/fixtures/: esphome_env_sensor.json  esphome_health_monitor.json  esphome_mesh_node.json  esphome_proprietary_beacon.json  (+1 more)
(+1 files in other folders)
